# ckanext-geoview

./: README.md  README.rst  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: publish-pypi.yml  test.yml
ckanext/geoview/: plugin.py  utils.py
ckanext/geoview/public/js/: common_map.js
ckanext/geoview/tests/: test_map_config_for_leaflet.py
